--- a/Random Password Generator/index.html
+++ b/Random Password Generator/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+    <link rel="stylesheet" href="styles.css">
     <title>Random Password Generator Vanilla JavaScript</title>
 </head>
 
@@ -24,51 +25,50 @@
                 </span>
             </div>
 
-            <div class="password-indicator" id="weak">
-                <div class="password-length">
-                    <div class="details">
-                        <label class="title">Password Length</label>
-                        <span class="password">15</span>
-                    </div>
-
-                    <input type="range" min="3" max="20" step="1" />
+            <div class="password-indicator" id="weak"></div>
+            <div class="password-length">
+                <div class="details">
+                    <label class="title">Password Length</label>
+                    <span class="password">15</span>
                 </div>
 
-                <div>
-                    <label class="title">Password Settings</label>
-                    <ul class="options">
-                        <li class="option">
-                            <input type="checkbox" id="lowercase" checked>
-                            <label for="lowercase">Lower case(a-z)</label>
-                        </li>
-                        <li class="option">
-                            <input type="checkbox" id="uppercase">
-                            <label for="uppercase">Upper case(A-Z)</label>
-                        </li>
-                        <li class="option">
-                            <input type="checkbox" id="numbers">
-                            <label for="numbers">Numbers(0-9)</label>
-                        </li>
-                        <li class="option">
-                            <input type="checkbox" id="symbols">
-                            <label for="symbols">Symbols(!^*@)</label>
-                        </li>
-                        <li class="option">
-                            <input type="checkbox" id="exc-duplicate">
-                            <label for="exc-duplicate">Exclude Duplicates</label>
-                        </li>
-                        <li class="option">
-                            <input type="checkbox" id="spaces">
-                            <label for="spaces">Include Spaces</label>
-                        </li>
-                    </ul>
-                </div>
+                <input type="range" min="3" max="20" value="15" step="1" />
+            </div>
+
+            <div class="password-settings">
+                <label class="title">Password Settings</label>
+                <ul class="options">
+                    <li class="option">
+                        <input type="checkbox" id="lowercase" checked>
+                        <label for="lowercase">Lower case(a-z)</label>
+                    </li>
+                    <li class="option">
+                        <input type="checkbox" id="uppercase">
+                        <label for="uppercase">Upper case(A-Z)</label>
+                    </li>
+                    <li class="option">
+                        <input type="checkbox" id="numbers">
+                        <label for="numbers">Numbers(0-9)</label>
+                    </li>
+                    <li class="option">
+                        <input type="checkbox" id="symbols">
+                        <label for="symbols">Symbols(!^*@)</label>
+                    </li>
+                    <li class="option">
+                        <input type="checkbox" id="exc-duplicate">
+                        <label for="exc-duplicate">Exclude Duplicates</label>
+                    </li>
+                    <li class="option">
+                        <input type="checkbox" id="spaces">
+                        <label for="spaces">Include Spaces</label>
+                    </li>
+                </ul>
 
                 <button class="generate-password">Generate Password</button>
-
-
-
             </div>
+
+           
+
         </div>
     </div>
 
