added favorite section functionality and add recipe to favorites

--- a/Recipe-App/index.html
+++ b/Recipe-App/index.html
@@ -27,47 +27,8 @@
 
         <div class="fav-container">
             <h3>Favorite Meals</h3>
-            <ul class="fav-meals">
-                <li>
-                    <img src="https://www.themealdb.com/images/media/meals/jcr46d1614763831.jpg" alt="">
-                    <span>Soup</span>
-                </li>
-                <li>
-                    <img src="https://www.themealdb.com/images/media/meals/uwxusv1487344500.jpg" alt="">
-                    <span>Fish</span>
-                </li>
-                <li>
-                    <img src="https://www.themealdb.com/images/media/meals/lwsnkl1604181187.jpg" alt="">
-                    <span>Meat</span>
-                </li>
-                <li>
-                    <img src="https://www.themealdb.com/images/media/meals/lwsnkl1604181187.jpg" alt="">
-                    <span>Meat</span>
-                </li>
-                <li>
-                    <img src="https://www.themealdb.com/images/media/meals/lwsnkl1604181187.jpg" alt="">
-                    <span>Meat</span>
-                </li>
-                <li>
-                    <img src="https://www.themealdb.com/images/media/meals/lwsnkl1604181187.jpg" alt="">
-                    <span>Meat</span>
-                </li>
-                <li>
-                    <img src="https://www.themealdb.com/images/media/meals/lwsnkl1604181187.jpg" alt="">
-                    <span>Meat</span>
-                </li>
-                <li>
-                    <img src="https://www.themealdb.com/images/media/meals/lwsnkl1604181187.jpg" alt="">
-                    <span>Meat</span>
-                </li>
-                <li>
-                    <img src="https://www.themealdb.com/images/media/meals/lwsnkl1604181187.jpg" alt="">
-                    <span>Meat</span>
-                </li>
-                <li>
-                    <img src="https://www.themealdb.com/images/media/meals/lwsnkl1604181187.jpg" alt="">
-                    <span>Meat</span>
-                </li>
+            <ul class="fav-meals" id="fav-meals">
+                <!-- Favorite Meals -->
             </ul>
         </div>
 
