--- a/Movies-App/index.html
+++ b/Movies-App/index.html
@@ -15,6 +15,13 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <form id="form" action="">
+            <input type="text" id="search" placeholder="Movie Name....">
+        </form>
+    </header>
+
+     <main>       
+     </main>
 </body>
 </html>
