Completed and implemeneted logic for Weather App

--- a/Weather-app/index.html
+++ b/Weather-app/index.html
@@ -11,23 +11,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./script.js" defer></script>
 
-    <script src="script.js" defer></script>
+    <title>Weather App</title>
 
-    <title>Github Profiles</title>
 </head>
 
 <body>
-    <h1>Github Profiles</h1>
-    <form action="">
-        <input type="text" id="search" placeholder="Enter user name...">
+    <form id="form" action=""> <input id="search" type="text" placeholder="Enter a location..." autocomplete="off">
     </form>
+    <main id="main">
 
-    <div class="container">
-
-    </div>
-
+    </main>
 </body>
 
 </html>
